# mashgraph3_ubuntu

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Readme.txt  build.sh  cmake_install.cmake
Utility/include/: GL.h  Utility.h
Utility/src/: GL.cpp  ShaderProgram.cpp  uvec3.cpp  vec3.cpp  vec4.cpp
objects/eagle/: EAGLE_2.MTL
objects/stone/: stone.mtl
objects/tree/: tree.mtl
objects/wolf/: WOLF.MTL
source/: Externs.h  Funcs.cpp  Funcs.h  Globals.cpp  Globals.h  Graphics.cpp  Graphics.h  Serializer.cpp  Serializer.h  Window.cpp  Window.h  main.cpp  mesh.h  model.h  shader.h
